test/error/macro_overapplied.sv
// pattern: too many macro arguments given
`define MACRO(a, b)
`MACRO(x, y, z)
